<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Daems</string>
    <string name="chat">聊天</string>
    <string name="contact">通讯录</string>
    <string name="edit">编辑</string>
    <string name="me">我</string>
    <string name="manageAccount">账户管理</string>
    <string name="search">搜索</string>
    <string name="trans_address">转账地址</string>
    <string name="send">发送</string>
    <string name="contact_address">请输入联系人地址</string>
    <string name="add">添加</string>
    <string name="new_account">生成新账号</string>
    <string name="account">账号</string>
    <string name="wallet">钱包</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="copy">复制</string>
    <string name="chatCoin">聊天币</string>
    <string name="flowCoin">流量币</string>
    <string name="trans">交易记录</string>
    <string name="expire">即将失效</string>
    <string name="trans_coin">转账</string>
    <string name="donate_flow_coin">捐赠</string>
    <string name="left_coin">余额</string>
    <string name="address">地址</string>
    <string name="amount">数量</string>
    <string name="desc_badge_bg">notification badge</string>
    <string name="password">钱包密码</string>
    <string name="password_text">密码</string>
    <string name="confirm_trans">确认转账</string>
    <string name="confirm_donate">确认捐赠</string>
    <string name="password_prompt1">提示密码非常重要</string>
    <string name="password_prompt2">如果密码丢失或忘记，钱包中的币也会丢失</string>
    <string name="password_prompt3">密码设置最少为6位</string>
</resources>
