<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_password_dialog"
    android:orientation="vertical" >
	<ImageView
        android:id="@+id/ivPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="23.333dp"
        android:contentDescription="@string/password_text"
        android:src="@drawable/password_dailog" />
	
	 <TextView 
            android:id="@+id/tvPasswordPrompt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:text="@string/password_prompt1"
            android:textColor="@color/trans_text_out"
            />
	 <TextView 
            android:id="@+id/tvPasswordPrompt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_gravity="center_horizontal"
            android:textSize="10sp"
            android:text="@string/password_prompt2"
            android:textColor="@color/list_chat_content"
            />
	 
	 <EditText
	    android:id="@+id/tvSearchContact"
	    android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="15.333dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password_prompt3"
        android:singleLine="true"
        android:textSize="16sp"
        android:textColor="@color/list_chat_content"
        android:background="@drawable/shape_password_text"
        android:gravity="center"/>
	 
	 <LinearLayout
	    android:layout_marginTop="15.333dp"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/transparent"
	    android:orientation="horizontal" >
	    <Button
            android:id="@+id/btn_ok"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/ok"
            android:textSize="16sp"
            android:textColor="@color/list_chat_name"
            android:background="@drawable/layout_border_top_right" 
            />
	    <Button
            android:id="@+id/btn_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/list_chat_content"
            android:background="@drawable/layout_border_top" 
            />
	 </LinearLayout>
</LinearLayout>