<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/background" >

        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/chat"
            android:textColor="@color/black"
            android:textSize="18sp" />
        
        <ImageButton 
            android:id="@+id/btn_topbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_launcher"
            android:background="@color/background"
            android:layout_marginRight="10dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="@color/gray" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rd_group"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rd_menu_chat"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_chat"
            android:text="@string/chat" />

        <RadioButton
            android:id="@+id/rd_menu_contact"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_contact"
            android:text="@string/contact" />

        <RadioButton
            android:id="@+id/rd_menu_me"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_me"
            android:text="@string/me" />
    </RadioGroup>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/rd_group"
        android:background="@color/gray" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/separator"
        android:layout_below="@id/ly_top_bar"
        android:background="@color/white" >
    </FrameLayout>

</RelativeLayout>