<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout  
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"  
    android:layout_height="match_parent"
    android:focusable="true"
	android:focusableInTouchMode="true" 
    android:background="#efeff4" >

    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/background" >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:textSize="16sp" />

         <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6.667dp"
            android:text="@string/me"
            android:textSize="16sp"
            android:textColor="@color/list_chat_date"
            android:background="@color/background"
            android:drawableLeft="@drawable/back"
            android:onClick="onClick"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ly_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/layout_border_black" >

        <Button
            android:id="@+id/btn_send"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="6.667dp"
            android:layout_marginRight="8.667dp"
            android:layout_marginTop="8.667dp"
            android:layout_marginBottom="8.667dp"
            android:background="@drawable/shape_background_button"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:text="@string/send" />

        <EditText
            android:id="@+id/etInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/btn_send"
            android:layout_marginTop="8.667dp"
            android:layout_marginBottom="8.667dp"
            android:layout_marginLeft="8.667dp"
            android:textSize="12sp"
            android:gravity="left"
            android:inputType="textMultiLine"
            />
    </RelativeLayout>
    
     <ListView
        android:id="@+id/lvChatRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_below="@id/ly_top_bar"  
        android:layout_above="@id/ly_bottom_bar" 
        android:gravity="center"
        android:divider="@null"
        />
</RelativeLayout>